Add signup form UI

--- a/index.html
+++ b/index.html
@@ -5,6 +5,109 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign Up</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <div class="flex-container">
+      <div class="picture">
+        <img src="bulb.jpg" alt="cool electricity image" />
+      </div>
+      <div class="form">
+        <div class="header">
+          <h1>International Dark energy symposium</h1>
+          <p>
+            This is the most real fake conference on energy in the world.
+            Connect with the greatest minds in the field of fake dark energy,
+            and other stuffs.
+          </p>
+          <p>Unless of course, you are not <i>dark</i> enough</p>
+
+          <button class="dark-button">Into the Darkness</button>
+        </div>
+        <div class="details">
+          <fieldset disabled="disabled">
+            <legend>Is this the real life?</legend>
+            <form action="" class="form-container">
+              <div class="names">
+                <div class="first-name">
+                  <label for="first-name">First Name</label>
+                  <input type="text" name="first-name" id="first-name" />
+                </div>
+                <div class="last-name">
+                  <label for="last-name">Last Name* </label>
+                  <input type="text" name="last-name" id="last-name" required />
+                </div>
+              </div>
+              <div class="contact">
+                <div class="email">
+                  <label for="email">Email*</label>
+                  <input type="email" name="email" id="email" />
+                </div>
+                <div class="handphone">
+                  <label for="hp">Handphone:</label
+                  ><input type="text" name="hp" id="hp" />
+                </div>
+              </div>
+              <div class="passwords">
+                <div class="first-pass">
+                  <label for="firstpass">Enter new password*</label
+                  ><input type="password" name="firstpass" id="firstpass" />
+                </div>
+                <div class="cfmpass">
+                  <label for="cfmpass">Confirm password*</label
+                  ><input type="password" name="cfmpass" id="cfmpass" />
+                </div>
+              </div>
+              <div class="submit">
+                <!-- <input type="submit" value="Into the Darkness" /> -->
+              </div>
+            </form>
+          </fieldset>
+        </div>
+
+        <div class="footer">
+          <figure>
+            <blockquote
+              cite="https://www.brainyquote.com/quotes/vaclav_smil_903017"
+            >
+              <i>
+                <q>
+                  The great hope for a quick and sweeping transition to
+                  renewable energy is wishful thinking.
+                </q>
+              </i>
+            </blockquote>
+            <figcaption>- Vaclav Smil</figcaption>
+          </figure>
+
+          <table>
+            <caption>
+              let the darkness begin
+            </caption>
+            <tr>
+              <th>Date</th>
+              <th>Location</th>
+              <th>Theme</th>
+            </tr>
+            <tr>
+              <td>21st June</td>
+              <td>Tan Chin Tuan Lecture Theatre</td>
+              <td>questioning the standard model</td>
+            </tr>
+            <tr>
+              <td>22nd June</td>
+              <td>LT 11a</td>
+              <td>Preon: sub-quark particles</td>
+            </tr>
+            <tr>
+              <td>23rd June</td>
+              <td>LT 11a</td>
+              <td>theoretical applications</td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
